alteração black friday

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <td>Produto1</td>
                 <td>2</td>
                 <td>5$</td>
-                <td rowspan="2">Sim</td>
+                <td rowspan="2">Nao</td>
 
 
 
